.provarCaches/00D4P000000xR5ZUAU/objects/Flosum__Temp_Log__c.object
<CustomObject>
    <fields>
        <fullName>Flosum__Async_Request_Id__c</fullName>
        <label>Async Request Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Batch_Job_Id__c</fullName>
        <label>Batch Job Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Flosum__Job_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Job Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flosum__Metadata_Types__c</fullName>
        <label>Metadata Types</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Org__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Org</label>
        <referenceTo>Flosum__Organisation__c</referenceTo>
        <relationshipLabel>Temp Logs</relationshipLabel>
        <relationshipName>Temp_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Flosum__Process_Type__c</fullName>
        <label>Process Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Retrieve</fullName>
                </value>
                <value>
                    <fullName>Schedule Deployment</fullName>
                </value>
                <value>
                    <fullName>Test Execution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flosum__Run_Test_Param__c</fullName>
        <label>Run Test Param</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Snapshot__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Snapshot</label>
        <referenceTo>Flosum__Snapshot__c</referenceTo>
        <relationshipLabel>Temp Logs</relationshipLabel>
        <relationshipName>Temp_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Flosum__Specified_Tests__c</fullName>
        <label>Specified Tests</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Flosum__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Flosum__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Exception</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flosum__Succeed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Succeed</label>
        <type>Checkbox</type>
    </fields>
    <label>Temp Log</label>
    <nameField>
        <displayFormat>TL-{YYYY}-{MM}-{DD}-{0000}</displayFormat>
        <label>Temp Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Temp Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>